[tool.poetry]
name = "ctsm-api"
version = "0.1.0"
description = ""
authors = ["kaveh <ka7eh@pm.me>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.17.6"
fastapi = "^0.75.1"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
gunicorn = "^20.1.0"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.35"}
alembic = "^1.7.7"
python-dateutil = "^2.8.2"
celery = {extras = ["librabbitmq"], version = "^5.2.6"}
requests = "^2.27.1"
scipy = {version = "^1.8.0", python = ">=3.10,<3.11"}
python-slugify = "^6.1.2"

[tool.poetry.dev-dependencies]
mypy = "^0.942"
black = "^22.3.0"
isort = "^5.10.1"
autoflake = "^1.4"
flake8 = "^4.0.1"
pre-commit = "^2.18.1"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
sqlalchemy2-stubs = "^0.0.2-alpha.21"
watchdog = {extras = ["watchmedo"], version = "^2.1.7"}
types-requests = "^2.27.14"
flake8-bugbear = "^22.3.23"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
