[tool.poetry]
name = "ctsm-api"
version = "0.1.0"
description = ""
authors = ["kaveh <ka7eh@pm.me>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.18.3"
fastapi = "^0.85.0"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
gunicorn = "^20.1.0"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.41"}
alembic = "^1.8.1"
python-dateutil = "^2.8.2"
celery = {extras = ["librabbitmq"], version = "^5.2.7"}
requests = "^2.28.1"
scipy = {version = "^1.9.1", python = ">=3.10,<3.11"}
python-slugify = "^6.1.2"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
mypy = "^0.982"
black = "^22.8.0"
isort = "^5.10.1"
autoflake = "^1.6.1"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
sqlalchemy2-stubs = "^0.0.2a27"
watchdog = {extras = ["watchmedo"], version = "^2.1.9"}
types-requests = "^2.28.11.1"
flake8-bugbear = "^22.9.23"
types-python-slugify = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
