[tool.poetry]
name = "ctsm-api"
version = "0.1.0"
description = ""
authors = ["kaveh <ka7eh@pm.me>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "~1.8"
celery = {extras = ["librabbitmq"], version = "~5.2"}
fastapi = "~0.85"
gunicorn = "~20.1"
passlib = {extras = ["bcrypt"], version = "~1.7"}
pydantic = {extras = ["dotenv", "email"], version = "~1.10"}
python-dateutil = "~2.8"
python-jose = {extras = ["cryptography"], version = "~3.3"}
python-multipart = "~0.0"
python-slugify = "~6.1"
requests = "~2.28"
scipy = {version = "~1.9", python = ">=3.10,<3.11"}
SQLAlchemy = {extras = ["mypy"], version = "~1.4"}
uvicorn = "~0.19"
xarray = {extras = ["netcdf4"], version = "~2022.10"}

[tool.poetry.dev-dependencies]
autoflake = "~1.7"
black = "~22.10"
flake8 = "~5.0"
flake8-bugbear = "~22.9"
isort = "~5.10"
mypy = "~0.982"
pre-commit = "~2.20"
pytest = "~7.1"
pytest-cov = "~4.0"
sqlalchemy2-stubs = "~0.0.2a29"
types-python-slugify = "~6.1"
types-requests = "~2.28"
watchdog = {extras = ["watchmedo"], version = "~2.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
